fix broken inserter icons

--- a/src/components/BuildingCard.scss
+++ b/src/components/BuildingCard.scss
@@ -85,7 +85,8 @@
     }
   }
 
-  .top-area .icon {
+  .top-area .icon,
+  .output-area .icon {
     margin-bottom: -36px;
     transform: scale(0.5) translateY(-30%);
   }
